# Formchain

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json  test.js  v.json
src/formchain_backend/: Cargo.toml  formchain_backend.did
src/formchain_backend/src/: lib.rs  types.rs
src/formchain_frontend/: package.json  tailwind.config.js
src/formchain_frontend/src/: app.css
src/formchain_frontend/src/components/: FormCard.svelte  FormMeta.svelte  InputModal.svelte  RadioInputComponent.svelte
src/formchain_frontend/src/lib/: canisters.js  store.js
src/formchain_frontend/src/routes/: +page.svelte
src/formchain_frontend/src/routes/dashboard/: +layout.svelte  +page.svelte
src/formchain_frontend/src/routes/form/: +layout.svelte
src/formchain_registry/: Cargo.toml
src/formchain_registry/src/: formchain_backend.wasm  lib.rs  types.rs
