[package]
name = "formchain_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = {workspace = true}
ic-cdk = {workspace = true}
hex = { workspace = true }
serde_bytes = "0.11"
serde = {workspace = true}
canister_http_router ={ path = "../canister_http_router"}
ic-stable-structures = "0.6.4"
ciborium = "0.2.2"
serde_json = "1"
# ic-cdk-timers = "0.6" # Feel free to remove this dependency if you don't need timers
