[package]
name = "formchain_registry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = {workspace = true}
ic-cdk = {workspace = true}
serde = {workspace = true}
serde_bytes = {workspace = true}
ic-ledger-types = {workspace = true}